syntax = "proto3";

package hello;

service HelloAPI {
    rpc Hello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}